// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Server addEntries add hot option 1`] = `
Array [
  Array [
    "client",
    "default",
    "index.js?http:",
    "localhost:8100",
  ],
  Array [
    "node_modules",
    "webpack",
    "hot",
    "dev-server.js",
  ],
  Array [
    "foo.js",
  ],
]
`;

exports[`Server addEntries add hot-only option 1`] = `
Array [
  Array [
    "client",
    "default",
    "index.js?http:",
    "localhost:8100",
  ],
  Array [
    "node_modules",
    "webpack",
    "hot",
    "only-dev-server.js",
  ],
  Array [
    "foo.js",
  ],
]
`;
